# vulnforce-claude-ai

./: .env.example  .gitignore  README.md  pyproject.toml  vulnforce-claude-input.docx
.claude/: settings.local.json
docs/: ARCHITECTURE.md  MVP_SCOPE.md  PRODUCT_SPEC.md  SECURITY_MODEL.md
examples/: app-description.yaml  scan-config.yaml
examples/sample-vuln-app/: app.py  requirements.txt
tests/: test_dast_parsers.py  test_models.py  test_parsers.py  test_pipeline_smoke.py
tests/fixtures/: gitleaks_sample.json  nuclei_sample.jsonl  semgrep_sample.json  trivy_sample.json  zap_sample.json
vulnforge/: __init__.py  cli.py  config.py  console.py  context.py  models.py  pipeline.py  stack.py  tooling.py
vulnforge/ai/: __init__.py  planner.py  provider.py  summarizer.py
vulnforge/correlate/: __init__.py  engine.py
vulnforge/report/: __init__.py  html.py  mermaid.py  normalize.py
vulnforge/report/templates/: report.html.j2
vulnforge/scanners/: __init__.py  base.py  registry.py
vulnforge/scanners/dast/: __init__.py  headers.py  nuclei.py  zap.py
vulnforge/scanners/sast/: __init__.py  gitleaks.py  semgrep.py  trivy.py
