[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnforge"
version = "0.1.0"
description = "VulnForge AI - a combined SAST + DAST security scanning orchestrator with AI-assisted correlation and reporting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [{ name = "Lars Amund Grorud" }]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "rich>=13.7",
]

[project.optional-dependencies]
# AI providers are optional. Without any of these (or an API key), VulnForge
# runs fully and degrades to deterministic, non-AI summaries.
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
dev = ["pytest>=8.0"]

[project.scripts]
vulnforge = "vulnforge.cli:main"
vf = "vulnforge.cli:main"

[tool.setuptools.packages.find]
include = ["vulnforge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
